--- a/src/styles/_sec_conteudo.scss
+++ b/src/styles/_sec_conteudo.scss
@@ -1,4 +1,4 @@
-/* Estilo para a seção SOBRE */
+
 .sobre-section {
     .sobre__content {
         display: flex;
@@ -37,7 +37,6 @@
 
 .personagens-section {
     width: 100%;
-    /* Adicione um padding lateral 0 para que o scroll container possa ocupar a largura total */
     padding-left: 0;
     padding-right: 0;
 }
@@ -45,30 +44,25 @@
     position: relative; 
 }
 
-/* CONFIGURAÇÃO DO CARROSSEL JS */
+
 .personagens-scroll-container {
-    /* CHAVE PARA O CARROSSEL: ESCONDE A BARRA NATIVA */
     overflow-x: hidden; 
-    scroll-behavior: smooth; /* Anima o movimento do JS */
+    scroll-behavior: smooth; 
     
-    /* Mantenha o truque de largura total */
     width: 100vw; 
     margin-left: calc(50% - 50vw); 
 }
 
-/* GRID INTERNO: MANTÉM OS CARDS LADO A LADO */
 .personagens-grid {
     display: flex;
     gap: 30px; 
     width: fit-content; 
     white-space: nowrap;
-
-    /* REAJUSTE O PADDING DO CONTAINER AQUI */
     padding: 20px 50px; 
 }
 
     .ator-card {
-        /* Aumentei a largura base para FORÇAR o efeito de slide e o scroll */
+        
         flex: 0 0 250px; 
         max-width: 250px;
         text-align: center;
@@ -96,16 +90,13 @@
 
     .personagens-wrapper {
     position: relative; 
-    /* Garante que os botões fiquem posicionados em relação a este wrapper */
 }
 
 .nav-btn {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    z-index: 10; /* Garante que fiquem acima dos cards */
-    
-    /* Estilo visual */
+    z-index: 10;
     background-color: rgba($fundo-principal, 0.7);
     color: $neon-secundario;
     border: 2px solid $neon-secundario;
@@ -127,18 +118,15 @@
 }
 
 .nav-btn--left {
-    left: 10px; /* Posição à esquerda */
+    left: 10px; 
 }
 
 .nav-btn--right {
-    right: 10px; /* Posição à direita */
+    right: 10px;
 }
 
-
-/* GRID DE POSTERS PARA FILMES */
 .filmes-poster-grid {
     display: grid;
-    /* Adapta-se à tela, mas o tamanho mínimo do card é 180px */
     grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); 
     gap: 20px;
     margin-top: 30px;
@@ -148,8 +136,6 @@
         border-radius: 8px;
         overflow: hidden;
         text-align: center;
-
-        /* REGRAS ESSENCIAIS PARA ALINHAR O RODAPÉ (ano) na base */
         display: flex;
         flex-direction: column; 
         justify-content: space-between; 
